--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   },
   "license": "",
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^6.3.0",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
-    "node-mailjet": "^3.3.7"
+    "node-mailjet": "^3.3.7",
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
